Allowing browser sandbox. Restricting to amd64 architecture.

--- a/snap/gui/zotero-standalone.desktop
+++ b/snap/gui/zotero-standalone.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 Terminal=false
-Exec=zotero-standalone
+Exec=zotero-standalone.zotero-standalone
 Name=Zotero
 Icon=${SNAP}/meta/gui/icon.png
 Categories=Utility;
