--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -8,6 +8,9 @@ grade: devel
 
 confinement: strict
 
+architectures:
+    - amd64
+
 apps:
   zotero-standalone:
     command: desktop-launch $SNAP/zotero
@@ -22,7 +25,7 @@ apps:
       - account-control
       - mount-observe
       - unity7
-      - browser-support
+      - browser-sandbox
       - desktop-legacy
       - desktop
       - network
@@ -36,5 +39,12 @@ parts:
     source-type: tar
     stage-packages:
       - libxt6
+      - libdbus-glib-1-2
     after:
       - desktop-gtk3
+
+plugs:
+  browser-sandbox:
+    interface: browser-support
+    allow-sandbox: true
+
